<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:gravity="center_horizontal"
    tools:context="com.example.builddewarp.MainActivity">

    <TextView
        android:id="@+id/tvLanguage"
        android:text="@string/language"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_toEndOf="@+id/tvLanguage"
        android:id="@+id/spn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/language">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/tv_Time"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLanguage"
        android:text="@string/time"
        android:textSize="20sp"
        android:layout_marginTop="16dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_toEndOf="@+id/tv_Time"
        android:id="@+id/spn_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLanguage"
        android:prompt="@string/time"
        android:layout_marginTop="16dp">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/tv_imgType"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Time"
        android:textSize="20sp"
        android:text="@string/imageType"
        android:layout_marginTop="16dp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spn_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_imgType"
        android:layout_below="@+id/tv_Time"
        android:layout_marginTop="16dp">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/tv_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_imgType"
        android:textSize="20sp"
        android:text="@string/usage"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_camera"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="30sp"
        android:layout_below="@+id/tv_usage"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
